--- a/src/maketa/Makefile.am
+++ b/src/maketa/Makefile.am
@@ -4,24 +4,24 @@
 PROJNAME = maketa
 
 HEADS =\
-	ta_stdef.h \
-	ta_platform.h \
-	ta_string.h \
-	ta_variant.h \
-	ta_list.h \
-	ta_type.h \
+	../ta/ta_stdef.h \
+	../ta/ta_platform.h \
+	../ta/ta_string.h \
+	../ta/ta_variant.h \
+	../ta/ta_list.h \
+	../ta/ta_type.h \
 	mta_parse.h \
 	mta_constr.h \
 	maketa.h
 
 SRCS =\
-	ta_ti.cpp \
-	ta_platform.cpp \
-	ta_platform_unix.cpp \
-	ta_string.cpp \
-	ta_variant.cpp \
-	ta_list.cpp \
-	ta_type.cpp \
+	../ta/ta_ti.cpp \
+	../ta/ta_platform.cpp \
+	../ta/ta_platform_unix.cpp \
+	../ta/ta_string.cpp \
+	../ta/ta_variant.cpp \
+	../ta/ta_list.cpp \
+	../ta/ta_type.cpp \
 	mta_parse.cpp \
 	mta_lex.cpp \
 	mta_constr.cpp \
@@ -31,11 +31,14 @@ ta_TA_type.h ta_TA_inst.h:
 	if [ ! -f ta_TA_type.h ];\
 	then touch -t 0412312359 ta_TA_type.h ta_TA_inst.h;fi
 
+ta_platform.cpp ta_platform_unix.cpp ta_string.cpp ta_variant.cpp ta_list.cpp ta_type.cpp:
+
 bin_PROGRAMS = maketa
 
 maketa_SOURCES = $(HEADS) $(SRCS)
 
 maketa_CPPFLAGS =\
+	-I@abs_srcdir@/../ta \
 	-I@abs_srcdir@/.. \
 	-I@abs_top_builddir@ \
 	-I@abs_srcdir@ \
