minor make change; Variant gui updates

--- a/Makefile.am
+++ b/Makefile.am
@@ -97,6 +97,12 @@ force_ta:
 	cd ${abs_top_builddir}/src/pdp && ${MAKE} force_ta
 	cd ${abs_top_builddir}/src/bp && ${MAKE} force_ta
 
+do_ta:
+	cd ${abs_top_builddir}/src/ta && ${MAKE} do_ta
+	cd ${abs_top_builddir}/src/tamisc && ${MAKE} do_ta
+	cd ${abs_top_builddir}/src/pdp && ${MAKE} do_ta
+	cd ${abs_top_builddir}/src/bp && ${MAKE} do_ta
+
 ifnames:
 	ifnames `find -name "*.cpp" -printf '%p ' -o -name "*.h" -printf '%p '` > ifnames.log
 	echo "Defines printed to ifnames.log"
