--- a/src/pdp_bin/Makefile.am
+++ b/src/pdp_bin/Makefile.am
@@ -7,14 +7,13 @@ srcdir = @srcdir@
 VPATH = @srcdir@
 
 # pdp++
-
 bin_PROGRAMS = pdp@PDP_SUFFIX@++
 
 pdp@PDP_SUFFIX@___SOURCES = main.cpp
 
 pdp@PDP_SUFFIX@___LDADD =\
-	@abs_top_builddir@/src/pdp_lib/libpdp@PDP_SUFFIX@.la \
-	@abs_top_builddir@/src/ta_lib/libta@PDP_SUFFIX@.la
+	@abs_top_builddir@/src/pdp_lib/libpdp4@PDP_SUFFIX@.la \
+	@abs_top_builddir@/src/ta_lib/libta4@PDP_SUFFIX@.la
 
 pdp@PDP_SUFFIX@___CPPFLAGS =\
 	-I@abs_top_builddir@ \
