--- a/src/pdp_lib/Makefile.am
+++ b/src/pdp_lib/Makefile.am
@@ -1,10 +1,10 @@
-lib_LTLIBRARIES = libpdp@PDP_SUFFIX@.la
+lib_LTLIBRARIES = libpdp4@PDP_SUFFIX@.la
 
-libpdp@PDP_SUFFIX@_la_SOURCES =
+libpdp4@PDP_SUFFIX@_la_SOURCES =
 
 # Dummy C++ source to cause C++ linking.
-nodist_EXTRA_libpdp@PDP_SUFFIX@_la_SOURCES = dummy.cxx
+nodist_EXTRA_libpdp4@PDP_SUFFIX@_la_SOURCES = dummy.cxx
 
-libpdp@PDP_SUFFIX@_la_LIBADD =\
+libpdp4@PDP_SUFFIX@_la_LIBADD =\
 	@abs_top_builddir@/src/pdp/libpdp@PDP_SUFFIX@.la \
 	@abs_top_builddir@/src/bp/libbp@PDP_SUFFIX@.la
