getting rid of all libraries maketa was linking against

--- a/src/maketa/Makefile.am
+++ b/src/maketa/Makefile.am
@@ -1,6 +1,9 @@
 #*********************************************************
 #  Process this file with automake to produce Makefile.in
 #*********************************************************
+LIBS=
+DEFS=
+
 PROJNAME = maketa
 
 HEADS =\
@@ -47,14 +50,4 @@ maketa_CPPFLAGS =\
 BUILT_SOURCES = ta_TA_type.h
 
 CLEANFILES = ta_TA_type.h ta_TA_inst.h
-
-# EXTRA_DIST =\
-# 	ta_base.h \
-# 	ta_constr.h \
-# 	ta_def.h \
-# 	ta_dump.h \
-# 	ta_filer.h \
-# 	ta_group.h \
-# 	ta_parse.h \
-# 	taglobal.h
 
