--- a/src/pdp_bin/Makefile.am
+++ b/src/pdp_bin/Makefile.am
@@ -1,6 +1,8 @@
 #*********************************************************
 #  Process this file with automake to produce Makefile.in
 #*********************************************************
+include $(top_srcdir)/mfstamp.am
+
 PROJNAME = pdp_bin
 DEFS=
 srcdir = @srcdir@
