--- a/src/pdp_lib/Makefile.am
+++ b/src/pdp_lib/Makefile.am
@@ -9,4 +9,5 @@ nodist_EXTRA_libpdp4@PDP_SUFFIX@_la_SOURCES = dummy.cxx
 
 libpdp4@PDP_SUFFIX@_la_LIBADD =\
 	@abs_top_builddir@/src/pdp/libpdp@PDP_SUFFIX@.la \
-	@abs_top_builddir@/src/bp/libbp@PDP_SUFFIX@.la
+	@abs_top_builddir@/src/bp/libbp@PDP_SUFFIX@.la \
+	@abs_top_builddir@/src/leabra/libleabra@PDP_SUFFIX@.la
