--- a/src/ta/Makefile.am
+++ b/src/ta/Makefile.am
@@ -93,6 +93,7 @@ TAHEADS =\
 	@abs_srcdir@/ta_dump.h \
 	@abs_srcdir@/ta_defaults.h \
 	@abs_srcdir@/ta_script.h \
+	@abs_srcdir@/dynenum.h \
 	$(TAHEADS_GUI)
 
 HEADS =\
@@ -114,6 +115,7 @@ HEADS =\
 	ta_dump.h \
 	ta_defaults.h \
 	ta_script.h \
+	dynenum.h \
 	$(HEADS_GUI)
 
 SRCS =\
@@ -135,6 +137,7 @@ SRCS =\
 	ta_dump.cpp \
 	ta_defaults.cpp \
 	ta_script.cpp \
+	dynenum.cpp \
 	$(SRCS_GUI) \
 	ta_ti.cpp
 
