--- a/plugins/HelloWorld/makefile
+++ b/plugins/HelloWorld/makefile
@@ -1,4 +1,4 @@
-INCLUDES = -I/home/mingus/pdp4.0/trunk/src/ta/../../. -I/home/mingus/pdp4.0/trunk/src/ta -I/home/mingus/pdp4.0/trunk/src/ta/../ta/ios-g++-3.1 -I/home/mingus/pdp4.0/trunk/src/ta/../pdp -I/home/mingus/pdp4.0/trunk/src/ta/../ta -I/home/mingus/pdp4.0/trunk/src/ta/../css -I/home/mingus/pdp4.0/trunk/src/ta/../leabra -I/home/mingus/pdp4.0/trunk/src/ta/../tamisc -I/home/mingus/pdp4.0/trunk/src/ta/../taiqtso -I/home/mingus/pdp4.0/trunk/src/ta/../bp -I/home/mingus/pdp4.0/trunk/src/ta/../tamisc
+INCLUDES = -I${PDP4DIR}/src/ta/../../. -I${PDP4DIR}/src/ta -I${PDP4DIR}/src/ta/../ta/ios-g++-3.1 -I${PDP4DIR}/src/ta/../pdp -I${PDP4DIR}/src/ta/../ta -I${PDP4DIR}/src/ta/../css -I${PDP4DIR}/src/ta/../leabra -I${PDP4DIR}/src/ta/../tamisc -I${PDP4DIR}/src/ta/../taiqtso -I${PDP4DIR}/src/ta/../bp -I${PDP4DIR}/src/ta/../tamisc
 
 all: clean qmake
 	${MAKE} -f Makefile
@@ -7,10 +7,10 @@ clean:
 	rm -f *~ \#* *TA* moc_hw.cpp Makefile
 
 ta:
-	/home/mingus/bin/maketa -css -cpp="g++ -E" $(INCLUDES) hw hw.h
+	~/bin/maketa -D__MAKETA__ -css -cpp="g++ -E" $(INCLUDES) hw hw.h
 
 moc:
-	/usr/local/Trolltech/Qt-4.1.0/bin/moc $(INCLUDES) -o moc_hw.cpp hw.h
+	${QTDIR}/bin/moc $(INCLUDES) -o moc_hw.cpp hw.h
 
 qmake: ta
 	${QTDIR}/bin/qmake -o Makefile hw.pro
