--- a/src/pdp_bin/Makefile.am
+++ b/src/pdp_bin/Makefile.am
@@ -13,9 +13,16 @@ bin_PROGRAMS = pdp@PDP_SUFFIX@++
 
 pdp@PDP_SUFFIX@___SOURCES = main.cpp
 
+# toggle creation of ta library. see configure.ac/acsite.m4
+if LIBTA
 pdp@PDP_SUFFIX@___LDADD =\
 	@abs_top_builddir@/src/pdp_lib/libpdp4@PDP_SUFFIX@.la \
 	@abs_top_builddir@/src/ta_lib/libta4@PDP_SUFFIX@.la
+else
+pdp@PDP_SUFFIX@___LDADD =\
+	@abs_top_builddir@/src/pdp_lib/libpdp4@PDP_SUFFIX@.la
+endif
+
 
 pdp@PDP_SUFFIX@___CPPFLAGS =\
 	-I@abs_top_builddir@ \
