--- a/src/pdp_bin/Makefile.am
+++ b/src/pdp_bin/Makefile.am
@@ -16,11 +16,11 @@ pdp@PDP_SUFFIX@___SOURCES = main.cpp
 # toggle creation of ta library. see configure.ac/acsite.m4
 if LIBTA
 pdp@PDP_SUFFIX@___LDADD =\
-	@abs_top_builddir@/src/pdp_lib/libpdp4@PDP_SUFFIX@.la \
-	@abs_top_builddir@/src/ta_lib/libta4@PDP_SUFFIX@.la
+	@abs_top_builddir@/src/pdp_lib/libpdp@PDP_SUFFIX@.la \
+	@abs_top_builddir@/src/ta_lib/libta@PDP_SUFFIX@.la
 else
 pdp@PDP_SUFFIX@___LDADD =\
-	@abs_top_builddir@/src/pdp_lib/libpdp4@PDP_SUFFIX@.la
+	@abs_top_builddir@/src/pdp_lib/libpdp@PDP_SUFFIX@.la
 endif
 
 
