--- a/src/ta_lib/Makefile.am
+++ b/src/ta_lib/Makefile.am
@@ -1,18 +1,19 @@
 include $(top_srcdir)/mfstamp.am
 
-lib_LTLIBRARIES = libta4@PDP_SUFFIX@.la
-libta4@PDP_SUFFIX@_la_SOURCES =
+lib_LTLIBRARIES = libta@PDP_SUFFIX@.la
+libta@PDP_SUFFIX@_la_LDFLAGS = -version-info @AX_LIB_MAJOR_VERSION@:@AX_LIB_MINOR_VERSION@:@AX_LIB_POINT_VERSION@
+libta@PDP_SUFFIX@_la_SOURCES =
 
 # Dummy C++ source to cause C++ linking.
-nodist_EXTRA_libta4@PDP_SUFFIX@_la_SOURCES = dummy.cxx
+nodist_EXTRA_libta@PDP_SUFFIX@_la_SOURCES = dummy.cxx
 
-libta4@PDP_SUFFIX@_la_LIBADD =\
+libta@PDP_SUFFIX@_la_LIBADD =\
 	@abs_top_builddir@/src/tamisc/libtamisc@PDP_SUFFIX@.la \
 	@abs_top_builddir@/src/css/libcss@PDP_SUFFIX@.la \
 	@abs_top_builddir@/src/ta/libta@PDP_SUFFIX@.la
 
 if TA_GUI
-libta4@PDP_SUFFIX@_la_LIBADD +=\
+libta@PDP_SUFFIX@_la_LIBADD +=\
 	@abs_top_builddir@/src/taiqtso/libtaiqtso@PDP_SUFFIX@.la
 endif
 
